--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,8 @@
 ~/dev/py/magicsack/CHANGES
 
+0.1.1
+    2014-11-07
+        * add PBKDF2 passphrase verification                        SLOC  173
 0.1.0
     2014-10-02
         * initial commit                                            SLOC  152 
