--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,8 @@
 ~/dev/py/magicsack/CHANGES
 
+0.2.2
+    2015-05-13
+        * skeletal init subcommand                                  SLOC  221
 0.2.1
     2015-05-08
         * documentation updates                                     SLOC  185
