--- a/CHANGES
+++ b/CHANGES
@@ -1,9 +1,14 @@
 ~/dev/py/magicsack/CHANGES
 
-0.2.2
+0.2.4
+    2015-05-15
+        * pkcs7 functionality moved to xlattice_py/crypto           SLOC  200
+        * confirmYorN, passwdStrength moved to xlattice/ui          SLOC  ???
+0.2.3
     2015-05-14
         * draft password strength assessor
         * loops to accept strength, confirm password                SLOC  285
+0.2.2
     2015-05-13
         * skeletal init subcommand                                  SLOC  221
 0.2.1
