--- a/CHANGES
+++ b/CHANGES
@@ -1,9 +1,12 @@
 ~/dev/py/magicsack/CHANGES
 
+0.2.5
+    2015-05-18
+        * init creates .magicsack/cfg.json                          SLOC  206
 0.2.4
     2015-05-15
         * pkcs7 functionality moved to xlattice_py/crypto           SLOC  200
-        * confirmYorN, passwdStrength moved to xlattice/ui          SLOC  ???
+        * confirmYorN, passwdStrength moved to xlattice/ui          SLOC  189
 0.2.3
     2015-05-14
         * draft password strength assessor
