add generateKey, devisePuzzle, checkPuzzle, and test

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,9 @@
 ~/dev/py/magicsack/CHANGES
 
+0.2.8
+    FUTURE - NOT ON GITHUB
+    2015-05-28
+        *
 0.2.7
     2015-05-27
         * added top level argument parser                           SLOC  306
