--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,8 @@
 ~/dev/py/magicsack/CHANGES
 
+v0.2.9
+    2015-05-29
+        * add handleAdd                                             SLOC  455
 0.2.8
     2015-05-28
         * add generateKey, devisePuzzle, checkPuzzle, and test      SLOC  384
@@ -36,3 +39,4 @@
 0.1.0
     2014-10-02
         * initial commit                                            SLOC  152 
+
