--- a/TODO
+++ b/TODO
@@ -1,6 +1,11 @@
 ~/dev/py/magicksack/TODO
 
 2015-05-28
+    * verify is getting incorrect PKCS7 padding error, line 68
+        in __init__.py, which calls line 66 in xlattice/crypto.py
+        - testPuzzle.py succeeds
+
+2015-05-28
     * BUG IN ARGPARSE: subcommands cannot include options
         if the primary command (magicSack in this case) has an
         option with a variable number of arguments (the subArgs)
