init writes puzzle, BuildList

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,8 @@
 ~/dev/py/magicsack/CHANGES
 
+v0.2.10
+    2015-05-31
+        * init writes puzzle, BuildList                             SLOC  491
 v0.2.9
     2015-05-29
         * add handleAdd                                             SLOC  455
@@ -39,4 +42,5 @@ v0.2.9
 0.1.0
     2014-10-02
         * initial commit                                            SLOC  152 
+
 
