--- a/TODO
+++ b/TODO
@@ -1,5 +1,8 @@
 ~/dev/py/magicksack/TODO
 
+2015-05-31
+    * readBuildList once NLHTree.find() is working
+
 2015-05-28
     * verify is getting incorrect PKCS7 padding error, line 68
         in __init__.py, which calls line 66 in xlattice/crypto.py
