chg checkPuzzle() sig; working int subcmd

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,9 @@
 ~/dev/py/magicsack/CHANGES
 
+
+v0.2.11
+    2015-06-12
+        * changed checkPuzzle signature                             SLOC  508
 v0.2.10
     2015-05-31
         * init writes puzzle, BuildList                             SLOC  491
@@ -42,5 +46,6 @@ v0.2.9
 0.1.0
     2014-10-02
         * initial commit                                            SLOC  152 
+
 
 
