--- a/TODO
+++ b/TODO
@@ -1,5 +1,11 @@
 ~/dev/py/magicksack/TODO
 
+2015-09-06
+    * read codahale.com/how-to-safely-store-a-password again
+        - written 2010-01-31, updated 2011-02-24
+    * then read www.unlimitednovelty.com/2012/03/dont-use-bcrypt.html
+        agaidn
+
 2015-06-12 
     * restructure magicSack so that top argparse level has only
         one option (-m/--magicDir) and subcommands have multiple
