minor edits to *.md

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,8 @@
 ~/dev/py/magicsack/CHANGES
 
+v0.2.13
+    2015-11-13
+        * minor edits to *.md                                       SLOC  534
 v0.2.12
     2015-09-06
         * minor edits to documentation                              SLOC  534
