--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,8 @@
 ~/dev/py/magicsack/CHANGES
 
+v0.2.14
+    2015-12-28
+        * minor fixes to website
 v0.2.13
     2015-11-13
         * minor edits to *.md                                       SLOC  534
@@ -52,6 +55,7 @@ v0.2.9
 0.1.0
     2014-10-02
         * initial commit                                            SLOC  152 
+
 
 
 
