--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,8 @@
 ~/dev/py/magicsack/CHANGES
 
+v0.2.15
+    2016-01-28
+        * minor edits                                               SLOC  532
 v0.2.14
     2015-12-28
         * minor fixes to website
@@ -55,6 +58,7 @@ v0.2.9
 0.1.0
     2014-10-02
         * initial commit                                            SLOC  152 
+
 
 
 
