--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,8 @@
 ~/dev/py/magicsack/CHANGES
 
+v0.2.16
+    2016-02-24
+        * update LICENSE                                            SLOC  526
 v0.2.15
     2016-01-28
         * minor edits                                               SLOC  532
@@ -58,6 +61,7 @@ v0.2.9
 0.1.0
     2014-10-02
         * initial commit                                            SLOC  152 
+
 
 
 
