--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,8 @@
 ~/dev/py/magicsack/CHANGES
 
+v0.2.19
+    2016-04-27
+        * add .dvcz/projCfg{,.local}                                SLOC  557
 v0.2.18
     2016-04-12
         * add .fileMap{,.local}; fix countem                        SLOC  540
@@ -67,6 +70,7 @@ v0.2.9
 0.1.0
     2014-10-02
         * initial commit                                            SLOC  152 
+
 
 
 
