--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,8 @@
 ~/dev/py/magicsack/CHANGES
 
+v0.2.20
+    2016-05-10
+        * correct use of xlattice.u                                 SLOC  566
 v0.2.19
     2016-04-27
         * add .dvcz/projCfg{,.local}                                SLOC  557
@@ -70,6 +73,7 @@ v0.2.9
 0.1.0
     2014-10-02
         * initial commit                                            SLOC  152 
+
 
 
 
