--- a/TODO
+++ b/TODO
@@ -1,5 +1,8 @@
 ~/dev/py/magicksack/TODO
 
+2016-05-11
+    * modify to use U_16 or U_FLAT 
+
 2015-09-06
     * read codahale.com/how-to-safely-store-a-password again
         - written 2010-01-31, updated 2011-02-24
