--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,8 @@
 ~/dev/py/magicsack/CHANGES
 
+v0.2.23
+    2016-08-17
+        * init works; general cleanup                               SLOC 1153
 v0.2.22
     2016-06-23
         * use xlattice.u.uDir; add ghpDoc/{css,img}/                SLOC 1047
@@ -79,6 +82,7 @@ v0.2.9
 0.1.0
     2014-10-02
         * initial commit                                            SLOC  152 
+
 
 
 
