--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,8 @@
 ~/dev/py/magicsack/CHANGES
 
+v0.2.24
+    2016-08-18
+        * destroy works                                             SLOC 1252
 v0.2.23
     2016-08-17
         * init works; general cleanup                               SLOC 1153
@@ -82,6 +85,7 @@ v0.2.9
 0.1.0
     2014-10-02
         * initial commit                                            SLOC  152 
+
 
 
 
