--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,8 @@
 ~/dev/py/magicsack/CHANGES
 
+v0.4.0
+    2016-10-05
+        * add pylint, coverage                                      SLOC 1437
 v0.3.1
     2016-09-12
         * fix FIX_MEs, limit to SHA2(56)                            SLOC 1276
@@ -94,6 +97,7 @@ v0.2.9
 0.1.0
     2014-10-02
         * initial commit                                            SLOC  152 
+
 
 
 
