--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,8 @@
 ~/dev/py/magicsack/CHANGES
 
+v0.4.1
+    2016-10-25
+        * changes in xlattice/nlhtree/buildlist APIs                SLOC 1445
 v0.4.0
     2016-10-05
         * add pylint, coverage                                      SLOC 1437
@@ -97,6 +100,7 @@ v0.2.9
 0.1.0
     2014-10-02
         * initial commit                                            SLOC  152 
+
 
 
 
