--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,8 @@
 ~/dev/py/magicsack/CHANGES
 
+v0.4.2
+    2016-11-29
+        * replace listdir with scandir; more pylinting              SLOC 1444
 v0.4.1
     2016-10-25
         * changes in xlattice/nlhtree/buildlist APIs                SLOC 1445
@@ -100,6 +103,8 @@ v0.2.9
 0.1.0
     2014-10-02
         * initial commit                                            SLOC  152 
+
+
 
 
 
