--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,8 @@
 ~/dev/py/magicsack/CHANGES
 
+v0.4.11
+    2018-02-19
+        * xlattice.crypto becomes xlcrypto                          SLOC 1476
 v0.4.10
     2018-01-16
         * AES_BLOCK_SIZE -> _BYTES                                  SLOC 1479
@@ -128,6 +131,7 @@ v0.2.9
 0.1.0
     2014-10-02
         * initial commit                                            SLOC  152 
+
 
 
 
