--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,12 @@
 ~/dev/py/magicsack/CHANGES
 
+v0.4.13
+    2018-03-07
+        * update setup.py, tox config files                         SLOC 1478
+v0.4.12
+    2018-02-21
+        * replaced hashlib with xlcrypto.hash                       
+        * replaced PBKDF2 with xlcrypto.keyderiv.pbkdf2             SLOC 
 v0.4.11
     2018-02-19
         * xlattice.crypto becomes xlcrypto                          SLOC 1476
@@ -131,6 +138,8 @@ v0.2.9
 0.1.0
     2014-10-02
         * initial commit                                            SLOC  152 
+
+
 
 
 
